Fix multiple roles (in model and api route). Added update method in Travel controller. Updated swagger documentation.
