# routes/api.php
@@ -12,6 +12,7 @@ Route::post('/login', [MainController::class, 'login']);
 // Private and accessible route to admin users
 Route::middleware('auth:sanctum')->group(function () {
     Route::post('/travels/{slug}/tours', [TourController::class, 'store'])->middleware(['role:admin']);
-    Route::post('/travels', [TravelController::class, 'store'])->middleware(['role:admin']);
-    Route::post('/logout', [MainController::class, 'logout'])->middleware(['role:admin', 'role:editor']);
+    Route::post('/addTravel', [TravelController::class, 'store'])->middleware(['role:admin']);
+    Route::patch('/updateTravel/{id}', [TravelController::class, 'update'])->middleware(['role:admin,editor']);
+    Route::post('/logout', [MainController::class, 'logout'])->middleware(['role:admin,editor']);
 });
